--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.profiles.active=smart
 
 hr.raise.smart.lowpercent=2
-hr.raise.default.percent=5
+hr.raise.def.percent=5
 hr.raise.smart.highpercent=10
+hr.raise.smart.higherpercent=12
+hr.raise.smart.pluspercent=15
 hr.raise.smart.lowyear=2.5
 hr.raise.smart.middleyear=5
 hr.raise.smart.highyear=10
+hr.raise.smart.higheryear=25
+hr.raise.smart.superyear=40
