hr project 5. hét

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,10 @@ hr.raise.smart.middleyear=5
 hr.raise.smart.highyear=10
 hr.raise.smart.higheryear=25
 hr.raise.smart.superyear=40
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/hr
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
